--- a/src/data/puzzles/3.md
+++ b/src/data/puzzles/3.md
@@ -6,22 +6,44 @@ category: "discrete"
 ---
 
 ## Question
-An explorer walks 1 mile south, then 1 mile East and then 1 mile North. And reaches back to the starting point. The explorer shoots a bear, what color is the bear?
+An explorer walks:
+* 1 mile South
+* 1 mile East
+* 1 mile North. 
+
+And finds themselves back at the starting point. The explorer shoots a bear, what color is the bear?
 
 ## Hint
-Earth surface is curved, not flat.
+The surface of the Earth is curved, not flat.
 
 ## Answer
 White
 
 ## Solution
-North-pole satisfies this condition, where moving one mile to south, east and north brings you back to the same point. And a bear living in the north pole must be a polar bear, which is white in color.
+The author states an impossible scenario because it is not possible to reach the starting point by taking 3 straight lines, at right-angles.
+The directions North/South/East/West are defined by movent along latitudes and longitudes. Latitudes are all parallel, but longitudes converge at the poles, due to the spherical shape of the Earth. Let us consider the North Pole.
 
-But North pole is not the only point on Earth to satisfy this. How many such points are there? Consider this, if movement towards East (1 mile) was not there, then the explorer would have reached the starting point no matter what. But, since we are consider such an extreme case (north pole), let's take one more step. Imagine if 1 mile was the circumference of the circle, then the explorer would have reached the starting point by moving East.
+If the explorer is initially standing at the North Pole:
+
+1. Every direction from the North Pole is due south. The explorer walks 1 mile south, i.e. away from the North Pole.
+2. Walking due east keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a ring with a radius of 1 mile, centered at the North Pole.
+3. Walking due north takes them back to the North Pole again.
+
+And a bear living at the North Pole must be a polar bear, which is white.
+
+---
+
+**Follow-up Question**:
+
+The North Pole is not the only point on Earth to satisfy this criterion. How many such points are there? 
+
+**Answer**:
+
+Consider this, if movement towards the East was not there, then the explorer would have reached the starting point no matter what. But, since we consider such an extreme case (the North Pole), let's take one more step. Imagine if 1 mile was the circumference of the ring where the explorer walked East, then the explorer would reach the starting point by moving East.
 
 Can this happen in real life - Yes!
 
-We can imagine a ring of size 1 mile near the south pole, about $1/(2 \pi)$ miles away from it. The radius of this ring is such that the circumference will be exactly 1 mile. If the explorer could start from 1 mile north of this ring, then they would have reached the starting point after moving 1 mile south, 1 mile east (entire ring) and 1 mile north.
+We can imagine a ring of circumference 1 mile, centered at the south pole, with a radius of $1/(2 \pi)$ miles. If the explorer could start from 1 mile north of this ring, then they would have reached the starting point after moving 1 mile south, 1 mile east (entire ring) and 1 mile north.
 
-Hence, any point located at approximately $1 + 1/(2 \pi) $ miles away from the south pole satisfies the condition. Hence there are infinite such points, the locus is a ring near the south pole. [A much better explanation is available here](https://mindyourdecisions.com/blog/2011/02/22/one-mile-south-one-mile-east-one-mile-north-a-classic-puzzle)
+Hence, any point located at about $1 + 1/(2 \pi)$ miles away from the south pole satisfies the condition. Hence there are infinite such points, the locus is a ring near the south pole. [A much better explanation is available here](https://mindyourdecisions.com/blog/2011/02/22/one-mile-south-one-mile-east-one-mile-north-a-classic-puzzle)
 
