--- a/src/data/puzzles/3.md
+++ b/src/data/puzzles/3.md
@@ -26,7 +26,7 @@ The directions North/South/East/West are defined by movent along latitudes and l
 If the explorer is initially standing at the North Pole:
 
 1. Every direction from the North Pole is due south. The explorer walks 1 mile south, i.e. away from the North Pole.
-2. Walking due east keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a ring with a radius of 1 mile, centered at the North Pole.
+2. Walking due east keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a circle with a radius of 1 mile, centered at the North Pole.
 3. Walking due north takes them back to the North Pole again.
 
 And a bear living at the North Pole must be a polar bear, which is white.
@@ -39,11 +39,11 @@ The North Pole is not the only point on Earth to satisfy this criterion. How man
 
 **Answer**:
 
-Consider this, if movement towards the East was not there, then the explorer would have reached the starting point no matter what. But, since we consider such an extreme case (the North Pole), let's take one more step. Imagine if 1 mile was the circumference of the ring where the explorer walked East, then the explorer would reach the starting point by moving East.
+Consider this, if movement towards the East was not there, then the explorer would have reached the starting point no matter what. But, since we consider such an extreme case (the North Pole), let's take one more step. Imagine if 1 mile was the circumference of the circle where the explorer walked East, then the explorer would reach the starting point by moving East.
 
 Can this happen in real life - Yes!
 
-We can imagine a ring of circumference 1 mile, centered at the south pole, with a radius of $1/(2 \pi)$ miles. If the explorer could start from 1 mile north of this ring, then they would have reached the starting point after moving 1 mile south, 1 mile east (entire ring) and 1 mile north.
+We can imagine a circle of circumference 1 mile, centered at the south pole, with a radius of $1/(2 \pi)$ miles. If the explorer could start from 1 mile north of this circle, then they would have reached the starting point after moving 1 mile south, 1 mile east (entire circle) and 1 mile north.
 
-Hence, any point located at about $1 + 1/(2 \pi)$ miles away from the south pole satisfies the condition. Hence there are infinite such points, the locus is a ring near the south pole. [A much better explanation is available here](https://mindyourdecisions.com/blog/2011/02/22/one-mile-south-one-mile-east-one-mile-north-a-classic-puzzle)
+Hence, any point located at about $1 + 1/(2 \pi)$ miles away from the south pole satisfies the condition. Hence there are infinite such points, the locus is a circle near the south pole. [A much better explanation is available here](https://mindyourdecisions.com/blog/2011/02/22/one-mile-south-one-mile-east-one-mile-north-a-classic-puzzle)
 
