--- a/src/data/puzzles/3.md
+++ b/src/data/puzzles/3.md
@@ -20,30 +20,39 @@ The surface of the Earth is curved, not flat.
 White
 
 ## Solution
-The author states an impossible scenario because it is not possible to reach the starting point by taking 3 straight lines, at right-angles.
-The directions North/South/East/West are defined by movent along latitudes and longitudes. Latitudes are all parallel, but longitudes converge at the poles, due to the spherical shape of the Earth. Let us consider the North Pole.
+It is not possible to reach the starting point by taking three straight lines, at right angles.
+The directions North/South/East/West are defined by movement along latitudes and longitudes. Latitudes are all parallel, but longitudes converge at the poles, due to the spherical shape of the Earth.
 
 If the explorer is initially standing at the North Pole:
 
 1. Every direction from the North Pole is due south. The explorer walks 1 mile south, i.e. away from the North Pole.
-2. Walking due east keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a circle with a radius of 1 mile, centered at the North Pole.
+2. Walking due East keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a circle with a radius of 1 mile, centered at the North Pole.
 3. Walking due north takes them back to the North Pole again.
 
-And a bear living at the North Pole must be a polar bear, which is white.
+![image](3_explorer.drawio.png)
+
+And a bear living at the North Pole must be a polar bear, which is **white**.
 
 ---
 
-**Follow-up Question**:
+### Follow-up Question
 
 The North Pole is not the only point on Earth to satisfy this criterion. How many such points are there? 
 
-**Answer**:
+### Follow-up Solution
 
-Consider this, if movement towards the East was not there, then the explorer would have reached the starting point no matter what. But, since we consider such an extreme case (the North Pole), let's take one more step. Imagine if 1 mile was the circumference of the circle where the explorer walked East, then the explorer would reach the starting point by moving East.
 
-Can this happen in real life - Yes!
+Imagine if $1$ mile was the circumference of the circle along which the explorer walked East, then there can be more points that satisfy the condition.
 
-We can imagine a circle of circumference 1 mile, centered at the south pole, with a radius of $1/(2 \pi)$ miles. If the explorer could start from 1 mile north of this circle, then they would have reached the starting point after moving 1 mile south, 1 mile east (entire circle) and 1 mile north.
+Can this happen in reality - Yes!
 
-Hence, any point located at about $1 + 1/(2 \pi)$ miles away from the south pole satisfies the condition. Hence there are infinite such points, the locus is a circle near the south pole. [A much better explanation is available here](https://mindyourdecisions.com/blog/2011/02/22/one-mile-south-one-mile-east-one-mile-north-a-classic-puzzle)
+Consider a circle $C_1$ of circumference 1 mile, centered at the south pole, with a radius of $1/(2 \pi)$ miles. If the explorer could start from 1 mile north of this circle, they will reach the starting point after moving 1 mile south, 1 mile east (entire circle) and 1 mile north.
+Hence, any point located at about $1 + 1/{(2 \pi)}$ miles away from the south pole satisfies this condition (infinite points).
 
+![image](3_explorer2.drawio.png)
+
+But wait, there is more! We can also have a circle $C_{1/2}$ of circumference $1/2$ miles, such that the explorer makes two turns around this circle while moving East. In general, the explorer can start from any point with the radius $(1 + \dfrac{1}{2\pi n})$ for any natural number $n$.
+
+
+### The curious case near the South Pole
+In the above formula, as $n$ increases, the latitude circles keep shrinking. Eventually down to the South Pole itself. Incidentally, moving East while standing on the South Pole is either impossible or equivalent to spinning. But if standing still is a valid movement towards the East, then the explorer can start anywhere on the latitude (circle) with a radius of 1 mile, centered at the South Pole, and reach the starting point after traveling for three miles, although it is debatable that the explorer only traveled for two miles.
