--- a/src/data/puzzles/3.md
+++ b/src/data/puzzles/3.md
@@ -11,7 +11,7 @@ An explorer walks:
 * 1 mile East
 * 1 mile North. 
 
-And finds themselves back at the starting point. The explorer shoots a bear, what color is the bear?
+And finds themselves back at the starting point. The explorer spots a bear, what is the color of the bear?
 
 ## Hint
 The surface of the Earth is curved, not flat.
@@ -21,11 +21,11 @@ White
 
 ## Solution
 It is not possible to reach the starting point by taking three straight lines, at right angles.
-The directions North/South/East/West are defined by movement along latitudes and longitudes. Latitudes are all parallel, but longitudes converge at the poles, due to the spherical shape of the Earth.
+The directions North, East, West or South are defined by movement along latitudes and longitudes. Latitudes are all parallel, but longitudes converge at the poles, due to the spherical shape of the Earth. We can investigate the movement near these poles.
 
-If the explorer is initially standing at the North Pole:
+If the explorer is initially standing at the **North Pole**:
 
-1. Every direction from the North Pole is due south. The explorer walks 1 mile south, i.e. away from the North Pole.
+1. Every direction from the North Pole is due South. The explorer walks 1 mile South, i.e. away from the North Pole.
 2. Walking due East keeps the same distance (one mile) from the North Pole. In other words, the explorer walks along the circumference of a circle with a radius of 1 mile, centered at the North Pole.
 3. Walking due north takes them back to the North Pole again.
 
