--- a/src/data/puzzles/12.md
+++ b/src/data/puzzles/12.md
@@ -9,15 +9,33 @@ category: "discrete"
 Assuming that temperature varies continuously, prove that there are always two opposite points on the Earth's surface that have the same temperature.
 
 ## Hint
-
+The property holds for any continuous function and in any number of dimensions $n \ge 2$.
 
 ## Answer
 
 
 ## Solution
-Aritro Pathak: consider any great circle.. T(x) is the temp at the point x .. let f(x)=T(x)-T(x+pi), then f(0)=T(0)-T(pi)..f(pi)=T(pi)-T(2pi)=T(pi)-T(0) then f(0) and f(pi) have different signs, so using mean value theorem, you have that f is 0 at some point.
+The motivation is that the temperature is a continuous function, and cannot keep increasing as we go around a circle.
+
+Consider any great circle, like the Equator.
+
+Suppose $t(\theta)$ is the temperature at the point $\theta$. 
+
+Define $f(\theta) = t(\theta)-t(\theta+\pi)$
+
+Note that $f(0)=t(0)-t(pi)$
+
+$f(\pi)=t(\pi)-t(2 \pi) = t(pi)-t(0) = -f(0)$
+
+Either both $f(0)$ and $f(\pi)$ are $0$ or one of them is positive and the other is negative.
+
+Using [Mean Value Theorem](https://en.wikipedia.org/wiki/Mean_value_theorem), $f(0)$ must be zero for some point between $0$ and $\pi$.
+
+This means that the temperature will be the same at the two points that are opposite to each other.
+
+---
  
-FunFact: There are uncountable number of such pairs.
+FunFact: There are an uncountable number of such pairs.
  
 Here is a video explanation:
 https://www.youtube.com/watch?v=5Px6fajpSio
