--- a/src/data/puzzles/12.md
+++ b/src/data/puzzles/12.md
@@ -9,7 +9,7 @@ category: "discrete"
 Assuming that temperature varies continuously, prove that there are always two opposite points on the Earth's surface that have the same temperature.
 
 ## Hint
-The property holds for any continuous function and in any number of dimensions $n \ge 2$.
+Consider the difference in temperature between two opposite points.
 
 ## Answer
 
@@ -31,14 +31,13 @@ Either both $f(0)$ and $f(\pi)$ are $0$ or one of them is positive and the other
 
 Using [Mean Value Theorem](https://en.wikipedia.org/wiki/Mean_value_theorem), $f(0)$ must be zero for some point between $0$ and $\pi$.
 
-This means that the temperature will be the same at the two points that are opposite to each other.
+Thus, there will always be a pair of two opposite points at the same temperature.
+
+
+There are an uncountably infinite number of such pairs.
 
 ---
- 
-FunFact: There are an uncountable number of such pairs.
- 
-Here is a video explanation:
-https://www.youtube.com/watch?v=5Px6fajpSio
- 
-An alternate version of this puzzle is the Mountain Man
-http://www.techinterview.org/post/521419748/mountain-man
+
+A video explanation by `singingbanana` is [here](https://www.youtube.com/watch?v=5Px6fajpSio).
+
+An alternate version of this puzzle is the [Mountain Man](http://www.techinterview.org/post/521419748/mountain-man)
