--- a/src/data/puzzles/14.md
+++ b/src/data/puzzles/14.md
@@ -6,13 +6,41 @@ category: "probability"
 ---
 
 ## Question
-Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, "Do you want to pick door No. 2?". What is the probability to win car if you switch?
+Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. Now, do you want to pick door No. 2? What is the probability to win the car if you switch?
 
 ## Hint
-
+The host always opens a door with a goat.
 
 ## Answer
 2/3
 
 ## Solution
-Probability that your initial choice did not have car is 2/3. So you should switch to the other gate, and win the car with probability 2/3
+The probability that your initial choice did not have a car is indeed $2/3$.
+
+
+**Initial Misstep**:
+After one door is opened, there are exactly two doors left, and one of them has a car. So the probability that the car is behind either door is $1/2$.
+This is incorrect because the host knows which door has a car and which door has a goat. The host always opens a door with a goat.
+
+**Correct Solution**:
+The following table shows which Door the host might open. Assume that the car is behind Gate #1, and we randomly choose one door.
+
+| Initial choice: | &nbsp; Door #1 &nbsp; | &nbsp; Door #2 &nbsp; | &nbsp; Door #3 &nbsp; |
+| --------------- | :-------------------: | :-------------------: | :-------------------: |
+| Reality         |          Car          |         Goat          |         Goat          |
+| Host opens:     |       #2 or #3        |          #3           |          #2           |
+| Remaining:      |       #3 or #2        |          #1           |          #1           |
+| Good to switch: |          No           |          Yes          |          Yes          |
+
+We see that at the end, the remaining unopened door is Door #1 if we start with Door #2 or Door #3.
+This means that in 2 out of 3 cases, we started with the incorrect Door (#2 or #3) and we got the option to switch with the correct door at the end (#1). 
+<!-- So, if we always decide to switch to the last unopened door, we will win the car 2 out of 3 times. -->
+
+<!-- Hence the probability to win by switching $= 2/3$ -->
+
+So you should switch to the other door, and win the car with a probability of $2/3$
+
+---
+
+The probability of being initially wrong is the same as the probability of being correct after switching. We can generalize this to $n$ doors. 
+The probability of winning the game by switching after the host has opened $n-2$ doors is $(1 - 1/n)$
