📝 e^pi or pi^e is a hard puzzle, not easy

--- a/src/data/puzzles/22.md
+++ b/src/data/puzzles/22.md
@@ -1,22 +1,78 @@
 ---
 puzzleId: 22
 title: "e^Pi or Pi^e"
-difficulty: "easy"
+difficulty: "hard"
 category: "general"
 ---
 
 ## Question
-Without explicitly calculating, find out which is bigger: e^Pi or Pi^e?
+Without explicitly calculating, find out which is bigger: $e^\pi$ or $\pi^e$?
 
 ## Hint
-
+One method would be to expand $e^x$, another would be to observe the derivative of a special function 
 
 ## Answer
-e^Pi
+$e^\pi$
 
 ## Solution
-This is a common placement test question. Since e^x = 1 + x…., we have e^x>1+x. Now, conveneintly choosing x = (Pi / e -1) and solving, we get e^Pi > Pi^e.
+<!--
+This is a common placement test question. 
+-->
+### Initial Misstep
+$e^\pi \approx 23.14; \pi^e \approx 22.46$, hence $e^\pi$ is bigger.
+But this is not a valid method. We need to compare the two numbers without calculating them.
 
-Another way is to observe for f(x) = x^(1/x), differentiating: f'(x) = f(x) * (1/x^2) * (1- ln x);  f is decreasing for x > e so pi^(1/pi) < e^(1/e); hence e^(pi)> pi^(e)
 
-Another approach is to assume e^Pi > Pi^e <=> Pi * ln e > e * ln Pi <=> ln e/e > lnPi/Pi. Now, notice that f(x) = lnx/x is decreasing function since f'(x) is negative in range $(e<x<\pi)$, hence above assumption is true!
+### Method 1
+
+Since $e^x = 1 + x + \dfrac{x^2}{2!} + \ldots$, we have $e^x > 1+x$. 
+
+Let $x = (\dfrac{\pi}{e} -1)$ and solve:
+
+$\implies e^{\pi/e - 1} > 1 + \dfrac{\pi}{e} - 1$
+
+$\implies \dfrac{e^{\pi/e}}{e} > \dfrac{\pi}{e}$
+
+$\implies e^{\pi/e}$ > $\pi$
+
+$\implies e^\pi$ > $\pi^e$ (raised to power $e$ on both sides)
+
+Hence $e^\pi$ is bigger.
+
+---
+
+### Method 2
+
+Suppose $\sim$ denotes the relation between the two terms.
+
+$e^\pi \sim \pi ^ e \iff e^{1/e} \sim \pi^{1/\pi}$ (raised to power $1/{e\pi}$ on both sides)
+
+Note the function $f(x) = x^{1/x}$
+
+To investigate how this function behaves, we need to take its derivative. But that's difficult.
+
+<!-- 
+Differentiating: $f'(x) = f(x) \cdot (1/x^2) \cdot (1- \ln{(x)} )$ 
+This is too difficult for me.
+-->
+Consider $g(x) = \ln(f(x)) =  \dfrac{\ln(x)}{x}$
+
+Differentiate using product rule: $d(u \cdot v) = u' \cdot v + u \cdot v'$ where $u=\ln(x), v = 1/x, u'=1/x, v' = -1/x^2$
+
+$g'(x) = \dfrac{1}{x} \cdot \dfrac{1}{x} + \ln(x) \cdot \dfrac{-1}{x^2}$
+
+The derivative $g'$ is negative if $\ln(x) > 1$
+
+$\implies g$ is decreasing for $x > e$
+
+$\implies f$ is decreasing for $x > e$ because $\ln$ is a monotonic transformation.
+
+$\implies f(e) > f(\pi)$ because $e<\pi$
+
+$\implies e^{1/e} > \pi^{1/\pi}$
+
+
+$\implies e^\pi > \pi^e$
+
+Thus $e^\pi$ is bigger.
+
