--- a/src/data/puzzles/221.md
+++ b/src/data/puzzles/221.md
@@ -13,7 +13,7 @@ Can A construct a winning strategy?
 Note: The question asks for the existence of the strategy, not to devise the strategy itself.
 
 ## Hint
-Can one player mimic the strategy of the other?
+Can one player copy the strategy of the other?
 
 ## Answer
 For a given $N$, either $A$ has a winning strategy or $B$. If $B$ has the strategy, then $A$ can strike 1 and copy $B$'s startegy.
@@ -27,7 +27,7 @@ The game can be represented as a tree, where each node represents a possible sta
 
 For instance, for $N=5$, root node is (5, 4, 3, 2, 1). There will be $N$ children nodes.
 
-Let level be the number of turns completed so far.
+Let "level" be the number of turns completed so far.
 
 At level $0$, we have the root node. All the states that can be reached by striking one number (and its divisors) are at level  1. And so on.
 
@@ -38,14 +38,24 @@ Many nodes might hold the same state. All the leaf nodes look like empty sets wh
 
 Let's color our game tree to represent the winning player in each possible end state. We color a leaf node "red" if the end state it represents is a win for Player $A$, and blue if it's a win for Player $B$. All leaf nodes at odd levels are red. And those are even levels are blue.
 
+![tree](221_tree.drawio.png)
+
 Note that both players will try to move rationally toward their favored colored children nodes. Hence we can propagate these colors up.
 We consider the following cases:
-1. If there is a node with all children as red, then that node itself becomes red, regardless of the level (odd or even). Same for blue.
+1. If all children of a node are red, then that node itself becomes red, regardless of the level (odd or even). Same for blue.
 
-2. If a node has both red and blue children, it depends on the player. If it is at an even level, then it is Player $A$'s turn. Otherwise Player $B$ is in control. If a node at an even level has atleast one red child-node, then we can color this node as red, and discard the blue children nodes. This is because Player $A$ will rationally move towards the winning state only.
-Similarly, we can propagate the blue nodes.
+2. If a node has both red and blue children, it depends on the player. If it is at an **even** level, then it is Player $A$'s turn. Otherwise Player $B$ is in control. If a node at an even level has atleast one red child-node, then we can color this node as red, and delete the blue children nodes. This is because Player $A$ will rationally move towards the winning state only. Similarly, we can propagate the blue nodes.
 
-Once a node is colored red, it is guaranteed that all the children nodes stay red. If there were any blue children, then those must have been discarded. Similarly, if a node is blue, all its children must be blue. This means that if both players act rationally the winner is predetermined from that state.
+<!-- 
+Once a node is colored red, it is guaranteed that all the children nodes stay red. If there were any blue children, then those must have been discarded. Similarly, if a node is blue, all its children must be blue.
+-->
+
+
+![tree](221_tree2.drawio.png)
+
+Thus, we can completely color the entire tree including the root node. It will either be entirely red or entirely blue.
+This means that if both players act rationally the winner is predetermined from that state.
+
 
 ### Existence of a Winning Strategy
 
@@ -58,7 +68,7 @@ From the root node, there can be $N$ children, associated with striking each cor
 Note that only the player $A$ can start with striking $1$ - a state only accessible from the root node. 
 -->
 
-But wait! There's a special move Player $A$ can make: striking out 1. Thus, Player $B$ is put into the same position Player $A$ was in at the start. The state (~~1~~, 2,..., N) is only accessible from the root node. From here, player B can choose to strike a number from $2$ to $N$. Because of an extra node, all the level-numbers switch from odd to even and vice a versa. Incidentally, this subtree will look exactly like the root tree with reverse colors (and also with one subtree cut-off, corresponding to this node.)
+But wait! There's a special move Player $A$ can make: striking out 1. Thus, Player $B$ is put into the same position Player $A$ was in at the start. The special state (~~1~~, 2,..., N) is only accessible from the root node. From here, player B can choose to strike a number from $2$ to $N$. Because of an extra node, all the level-numbers switch from odd to even and vice a versa. Incidentally, this subtree will look exactly like the root tree with reverse colors (and also with one subtree cut-off, corresponding to this node.)
 
 Thus, the root of the subtree representing this new game state is **red** because all the nodes from this point forward are red. This means Player $A$ has a winning strategy from this point.
 
